# GPU-AMG-libraries-evaluation

./: .gitmodules  AMGX_eval.cpp  CMakeLists.txt  README.md  amgcl_cuda_eval.cpp  amgcl_cuda_mpi_eval.cpp  amgcl_vexcl_mpi_eval.cpp  eval_AMGX.cpp  ginkgo_eval.cpp  hypre_eval.cpp  main.cpp
configs_AMGX/: AMG_CLASSICAL_CG.json  PCGF_V.json  PCG_V.json  PCG_V_TRUST.json  config_AMGX.json  config_AMGX_PCG_AMG.json
configs_AMGX/study/: oe  sorted_config.txt  trust_config.txt
data/: AMGX_formatter.sh  rhs_51840.mtx
notes/: hypre_cheat_sheets_fromarcane.md
sbatch_scripts/: job_a100_jeanzay.sh
